Development in progress

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#research">Research</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="resume.html">Resume</a></li>
+      <li><a href="#resume">Resume</a></li>
       <li><a href="#blog">Blog</a></li>
       <li><a href="#photography">Photography</a></li>
     </ul>
@@ -50,7 +50,7 @@
 
 <main>
   <section class="section brewing">
-  <h2>What's new?</h2>
+  <h2>Development in Progress</h2>
   <div class="divider-accent"></div>
   <div id="card-container" class="card-container"></div>
    <button id="load-more" class="load-more-btn">Load More</button>
@@ -93,31 +93,6 @@
   });
 
   const updates = [
-    {
-      image: "assets/img/placeholder.png",
-      description: "Presented my research at CHI 2025.",
-      date: "2025-07-05"
-    },
-    {
-      image: "assets/img/placeholder.png",
-      description: "Launched Spellingo on GitHub.",
-      date: "2025-06-25"
-    },
-    {
-      image: "assets/img/placeholder.png",
-      description: "Built a plant monitoring IoT system.",
-      date: "2025-06-10"
-    },
-    {
-      image: "assets/img/placeholder.png",
-      description: "Published my first Medium article on AI.",
-      date: "2025-06-01"
-    },
-    {
-      image: "assets/img/placeholder.png",
-      description: "Started a new internship at Meta.",
-      date: "2025-05-20"
-    }
     // Add more entries here...
   ];
 
