--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
   <nav class="main-nav">
     <ul class="nav-links">
       <li><a href="index.html" class="nav-link">Home</a></li>
-      <li><a href="about.html" class="nav-link">About</a></li>
-      <li><a href="research.html" class="nav-link">Research</a></li>
-      <li><a href="projects.html" class="nav-link">Projects</a></li>
-      <li><a href="resume.html" class="nav-link">Resume</a></li>
-      <li><a href="blog.html" class="nav-link">Blog</a></li>
-      <li><a href="photography.html" class="nav-link">Photography</a></li>
+      <li><a href="index.html" class="nav-link">About</a></li>
+      <li><a href="index.html" class="nav-link">Research</a></li>
+      <li><a href="index.html" class="nav-link">Projects</a></li>
+      <li><a href="index.html" class="nav-link">Resume</a></li>
+      <li><a href="index.html" class="nav-link">Blog</a></li>
+      <li><a href="index.html" class="nav-link">Photography</a></li>
     </ul>
   </nav>
 </header>
@@ -52,8 +52,6 @@
   <section class="section brewing">
   <h2>Development in Progress</h2>
   <div class="divider-accent"></div>
-  <div id="card-container" class="card-container"></div>
-   <button id="load-more" class="load-more-btn">Load More</button>
 </section>
 </main>
   <footer class="footer">
