--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Resume | Mahrukh Tauseef</title>
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
  <header class="header">
@@ -16,6 +16,9 @@
         <img src="assets/img/MainPhoto.png" alt="Mahrukh Tauseef" class="badge-photo" />
         <h1 class="name">Mahrukh Tauseef</h1>
       </div> 
+      <div class="qualities-line">
+      <span class="typing"></span>
+      </div>
     </div>
 
     <div class="header-right-icons">
@@ -24,22 +27,23 @@
       <a href="https://github.com/mahrukhtauseef" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
       <a href="https://scholar.google.com/citations?user=T_CnHToAAAAJ&hl=en&oi=ao" target="_blank" aria-label="Google Scholar"><i class="fa-brands fa-google-scholar"></i></a>
     </div>
-  </div>
-  <nav class="main-nav">
+     <nav class="main-nav">
     <ul class="nav-links">
       <li><a href="index.html" class="nav-link">Home</a></li>
       <li><a href="about.html" class="nav-link">About</a></li>
       <li><a href="research.html" class="nav-link">Research</a></li>
       <li><a href="projects.html" class="nav-link">Projects</a></li>
       <li><a href="resume.html" class="nav-link">Resume</a></li>
-      <li><a href="blog.html" class="nav-link">Blog</a></li>
+      <li><a href="reflections.html" class="nav-link">Reflections</a></li>
       <li><a href="photography.html" class="nav-link">Photography</a></li>
     </ul>
   </nav>
+  </div>
+ 
 </header>
   <main class="section resume">
     <div class="left-panel">
-  <a href="assets/pdf/Mahrukh_Tauseef_Resume.pdf" class="highlight-box download-btn" download>
+  <a href="assets/pdf/Tauseef_Resume_Current.pdf" class="highlight-box download-btn" download>
     <i class="fas fa-download"></i> Resume
   </a>
 </div>
@@ -117,15 +121,20 @@ focusing on human-computer interaction and haptic technology.</div>
 
     <section>
       <h3>Skills</h3>
-      <p>Unity, C#, Python, HTML/CSS, Machine Learning, AR/VR development</p>
+      <p> <strong> Programming Tools: </strong> Python, C#, Unity Engine, Unreal Engine, MATLAB, Fusion360, EAGLE </p>
+      <p><strong> Technical Areas: </strong> Augmented/Mixed Reality, Human-Computer Interaction, System Design, Study Design, Qualitative Analysis, Statistical Analysis, Machine Learning, Spatial Mapping, Multimodal Data Fusion, End-to-end product development, Rapid Prototyping, CAD Design, PCB Design, Technical Writing</p>
+      <p><strong> Professional Skills: </strong> Research, Teamwork and Collaboration, Critical Thinking, Design Thinking, Teaching, Entrepreneurship </p>
+
     </section>
 
 
     <section>
       <h3>Awards & Grants</h3>
       <ul>
-        <li>NSF I-Corps Awardee – 2025</li>
-        <li>Vanderbilt Innovation Grant – 2024</li>
+        <li> Meta's Aria Research Kit (12 Aria Glasses) – 2025</li>
+        <li>National Science Foundation I-Corps Awardee ($50,000) – 2024</li>
+        <li>Learning and Innovation at Vanderbilt Spark Grant ($10,000) – 2024</li>
+        <li>Wondry's Ideator and Builder Grants ($7500) – 2023 - 2024</li>
       </ul>
     </section>
   </main>
