Ready for deployment v1

--- a/research.html
+++ b/research.html
@@ -6,6 +6,13 @@
   <title>Research | Mahrukh Tauseef</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
+  <style>
+    .tag {
+      margin: 0 6px 6px 0;
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
    <header class="header">
@@ -41,9 +48,85 @@
   </div>
  
 </header>
-   <footer class="footer">
-    <p>&copy; 2025 Mahrukh Tauseef. All rights reserved.</p>
-  </footer>
+<main> <div class="project-grid">
+  <a id="#ARLoco"></a>
+  <section class="project-card">
+    <h2 class="project-title">Locomotion Mapping in Augmented Reality Telepresence</h2>
+    <img src="assets/img/Research/Trajectory.png" alt="locomotion" class="project-image" />
+    <p class="project-summary">Ph.D. Dissertation: Mapping the movement of a user in their own space to their avatar in a dissimilar space while preserving the user's pose and keeping the avatar's movement in the remote space realistic. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a> </p>
+
+    <div class="project-tags">
+      <span class="tag">Augmented Reality</span>
+      <span class="tag">Spatial Mapping</span>
+      <span class="tag">Machine Learning</span>
+      <span class="tag">ARIA Glasses</span>
+      <span class="tag">Multimodal Data</span>
+      <span class="tag">Python</span>
+      <span class="tag">Unity Engine</span>
+    </div>
+    <div class="project-status">
+      <span class="status ongoing">On-going</span>
+    </div>
+  </section>
+
+    <section class="project-card">
+      <a id="#ARASD"></a>
+    <h2 class="project-title">Multi-user Augmented Reality Telepresence for Autistic Individuals</h2>
+    <img src="assets/img/Research/Hobbs_Graphic.png" alt="Multi-user AR Telepresence" class="project-image" />
+    <p class="project-summary">An AR communication modality designed to test the feasibility of AR telepresence for multi-user collaboration between Autistic individuals without inducing anxiety. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">Augmented Reality Telepresence</span>
+      <span class="tag">Motion Mapping</span>
+      <span class="tag">Network Communication</span>
+      <span class="tag">Avatar Creation</span>
+      <span class="tag">Unreal Engine</span>
+      <span class="tag">Python</span>
+      <span class="tag">Qualitative and Quantitative Analysis</span>
+      <span class="tag">Iterative Participatory Design</span>
+
+    </div>
+    <div class="project-status">
+      <span class="status complete">Complete</span>
+    </div>
+  </section>
+  <section class="project-card">
+     <a id="#AROlder"></a>
+     <h2 class="project-title">Augmented Reality Telepresence for Older Adults</h2>
+    <img src="assets/img/Research/ARforOlder.png" alt="ARforOlder" class="project-image" />
+    <p class="project-summary">A collaborative AR telepresence system that allows older adults to their with their loved ones in a geographically different place. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">Augmented Reality Telepresence</span>
+      <span class="tag">Motion Mapping</span>
+      <span class="tag">Network Communication</span>
+      <span class="tag">Avatar Creation</span>
+      <span class="tag">Unreal Engine</span>
+      <span class="tag">Python</span>
+      <span class="tag">Qualitative and Quantitative Analysis</span>
+      <span class="tag">Iterative Participatory Design</span>
+    </div>
+    <div class="project-status">
+      <span class="status ongoing">On-going</span>
+    </div>
+  </section>
+
+  <section class="project-card">
+    <a id="#CVE"></a>
+    <h2 class="project-title">A Virtual Environment to Support Collaboration between Autistic and Non-Autistic Individuals</h2>
+    <img src="assets/img/Research/CVE.png" alt="CVE" class="project-image" />
+    <p class="project-summary">A serious game developed to foster collaboration between Autistic and Non-autistic individuals, measure it quantitatively through multimodal data and provide automated and dynamic feedback. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">Serious Game Design</span>
+      <span class="tag">Multimodal Data</span>
+      <span class="tag">Network Communication</span>
+      <span class="tag">Game Synchronization</span>
+      <span class="tag">Qualitative and Quantitative Analysis</span>
+      <span class="tag">Unity Game Engine</span>
+    </div>
+    <div class="project-status">
+      <span class="status complete">Complete</span>
+    </div>
+  </section>
+  </div></main>
 </body>
 </html>
 
