--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
   <title>Resume | Mahrukh Tauseef</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
  <header class="header">
@@ -41,7 +42,7 @@
   </div>
  
 </header>
-  <main class="section resume">
+  <main class="resume">
     <div class="left-panel">
   <a href="assets/pdf/Tauseef_Resume_Current.pdf" class="highlight-box download-btn" download>
     <i class="fas fa-download"></i> Resume
@@ -139,9 +140,6 @@ focusing on human-computer interaction and haptic technology.</div>
     </section>
   </main>
 
-  <footer class="footer">
-    <p>&copy; 2025 Mahrukh Tauseef. All rights reserved.</p>
-  </footer>
 </body>
 </html>
 <script>
