--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <title>About | Mahrukh Tauseef</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
 </head>
 <body class="about-page">
    <header class="header">
@@ -41,26 +42,34 @@
   </div>
  
 </header>
-  <div class="about-container">
-  <aside class="timeline-track">
-    <ul class="timeline-dots">
-      <li><a href="#present" class="dot active" data-label="Present"></a></li>
-      <li><a href="#college" class="dot" data-label="College"></a></li>
-      <li><a href="#highschool" class="dot" data-label="High School"></a></li>
-      <li><a href="#baby" class="dot" data-label="Baby Mahrukh"></a></li>
-    </ul>
-  </aside>
 
-  <main class="timeline-sections">
-    <section id="present"><h2>Now</h2><p>...</p></section>
-    <section id="college"><h2>College</h2><p>...</p></section>
-    <section id="highschool"><h2>High School</h2><p>...</p></section>
-    <section id="baby"><h2>Baby Mahrukh</h2><p>...</p></section>
-  </main>
-</div>
-   <footer class="footer">
-    <p>&copy; 2025 Mahrukh Tauseef. All rights reserved.</p>
-  </footer>
+  <main>
+    <!-- HTML: About section inspired by Nicolas Jullien -->
+<section class="about-simple">
+  <div class="about-container">
+    <img src="assets/img/Intro.jpg" alt="Mahrukh Tauseef" class="about-photo" />
+    <p class="about-text">
+    Hi, I’m Mahrukh. I come from a teeny tiny town in Pakistan called Toba Tek Singh. I hated growing up in Toba. I was convinced it was putting me at a disadvantage given the limited opportunities. But in hindsight, Toba played a huge role in molding me. It taught me to make more with less and to thrive in scarcity.
+
+I was always fond of school and did considerably well. At 14, I realized I had outgrown the education system in Toba and convinced my parents to send me to a boarding school — a bold and uncommon step for girls in my town. It felt like I gave away my childhood in pursuit of purpose. Since then, I’ve lived in Abu Dhabi, New York, and now Nashville — chasing that purpose.
+<br>
+   
+Each city shaped me. Abu Dhabi challenged my beliefs. I studied alongside people from over 80 countries, engaging in eye-opening discussions. I take a lot of pride in the kindness and openness this experience instilled in me.
+
+Next, I lived in New York for a year and found my forever home. This is where I embraced my true self — quirky, bold, vibrant. Its energy resonated deeply and made me want to build something bigger than myself.
+
+My Ph.D. brought me to Nashville, where I’ve been living for four years. Nashville grounded me. Through my Ph.D., I got to try a hundred different things and found what I really want to do.
+    
+<br>
+I’m a technologist, a builder, and a believer in meaningful design. My passion lies in Human-Computer Interaction. I want to design tools that help people — tools that make a difference, even in small ways. I don’t attach myself to specific platforms or technologies; I know I can learn whatever the problem demands.
+
+My dream job is simple: to wake up every day and solve real-world problems — both the shark bites and the mosquito bites — always led by the question: who does this help?
+    </p>
+  </div>
+</section>
+    
+  
+</main>
 </body>
 </html>
 
