--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,13 @@
   <title>Projects | Mahrukh Tauseef</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
+<style>
+    .tag {
+      margin: 0 6px 6px 0;
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
   <header class="header">
@@ -42,9 +49,112 @@
  
 </header>
 
-   <footer class="footer">
-    <p>&copy; 2025 Mahrukh Tauseef. All rights reserved.</p>
-  </footer>
+<main class="project-list">
+  <div class="project-grid">
+  <section class="project-card">
+    <a id="#mindy"></a>
+    <h2 class="project-title">Mindy: AI Assistant for Dementia Care</h2>
+    <img src="assets/img/Updates/Mindy.png" alt="Mindy project screenshot" class="project-image" />
+    <p class="project-summary">I am designing a dementia aware AI agent to support people living with dementia through personalized conversation and memory assistance. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">Python</span>
+      <span class="tag">Large Language Models</span>
+      <span class="tag">Unity Game Engine</span>
+    </div>
+    <div class="project-status">
+      <span class="status complete">Complete</span>
+    </div>
+  </section>
+
+  <section class="project-card">
+     <a id="#spellingo"></a>
+    <h2 class="project-title">Rapid Prototyping with Unity</h2>
+    <img src="assets/img/Updates/Spellingo.png" alt="Spellingo" class="project-image" />
+    <p class="project-summary">I designed of an application, Spellingo, to guage interest of students in elementary schools in learning how to spell. This project was done as a part of a workshop where I was to do a hands-on tutorial on using Unity for application development. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">Unity Game Engine</span>
+      <span class="tag">Activity Design</span>
+      <span class="tag">Rapid Prototyping</span>
+    </div>
+    <div class="project-status">
+      <span class="status complete">Complete</span>
+    </div>
+  </section>
+
+  <section class="project-card">
+     <a id="#smartplant"></a>
+    <h2 class="project-title">Attachable Smart Plant System</h2>
+    <img src="assets/img/Projects/SmartPlant.png" alt="Smart Plant" class="project-image" />
+    <p class="project-summary">I am designing a low-cost smart plant system that controls the light and soil moisture based on the plant and can be attached to any plant. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">Electronics</span>
+      <span class="tag">PCB Design</span>
+      <span class="tag">CAD Design</span>
+      <span class="tag">3D Printing</span>
+      <span class="tag">EasyEDA</span>
+      <span class="tag">Arduino IDE</span>
+      <span class="tag">ESP-32 Wifi</span>
+    </div>
+    <div class="project-status">
+      <span class="status ongoing">On-going</span>
+    </div>
+  </section>
+
+
+  <section class="project-card">
+     <a id="#dashcam"></a>
+    <h2 class="project-title">A Dashcam Holder</h2>
+    <img src="assets/img/Projects/Dashcam_Holder.png" alt="Dashcam_Holder" class="project-image" />
+    <p class="project-summary">My dashcam's holder broke. So I designed and 3D printed my own holder that turned out to be more robust than the original one. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">CAD Design</span>
+      <span class="tag">3D Printing</span>
+      <span class="tag">Autodesk Fusion</span>
+      <span class="tag">Bambu Lab</span>
+    </div>
+    <div class="project-status">
+      <span class="status complete">Complete</span>
+    </div>
+  </section>
+
+  <section class="project-card">
+     <a id="#crochet"></a>
+    <h2 class="project-title">A Crochet Needle Stand</h2>
+    <img src="assets/img/Projects/CrochetHolder.jpg" alt="Crochet Needle Stand" class="project-image" />
+    <p class="project-summary">I designed and 3D printed a stand to store my crochet needles by their size. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">CAD Design</span>
+      <span class="tag">3D Printing</span>
+      <span class="tag">Autodesk Fusion</span>
+      <span class="tag">Bambu Lab</span>
+    </div>
+    <div class="project-status">
+      <span class="status complete">Complete</span>
+    </div>
+  </section>
+
+  <section class="project-card">
+     <a id="#intercom"></a>
+    <h2 class="project-title">Intercom for Work Friends</h2>
+    <img src="assets/img/Projects/Circuit_PCB.jpg" alt="Intercom" class="project-image" />
+    <p class="project-summary">My work friend and I keep our phones on silent when we work but sometimes we want to go for a walk or grab a coffee. I am designing an intercom to allow us to communicate just for that purpose. <a href="HTML_Files/placeholder.html" class="learn-more">Learn more...</a></p>
+    <div class="project-tags">
+      <span class="tag">Electronics</span>
+      <span class="tag">PCB Design</span>
+      <span class="tag">CAD Design</span>
+      <span class="tag">3D Printing</span>
+      <span class="tag">EasyEDA</span>
+      <span class="tag">Arduino IDE</span>
+      <span class="tag">ESP32 ESP-Now Communication</span>
+    </div>
+    <div class="project-status">
+      <span class="status ongoing">On-going</span>
+    </div>
+  </section>
+  </div>
+  <!-- Add more project-card sections as needed -->
+</main>
+
 </body>
 </html>
 
